# OpsPilot

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  api_contract.md  architecture_blueprint.md  conftest.py  docker-compose.yml  engineering_handbook.md  monorepo_blueprint.md  package.json  pnpm-lock.yaml  pyproject.toml  sprint_roadmap.md  start.py  test_ai_import.py  test_backend_import.py  ux_architecture.md
apps/ai-orchestrator/: pyproject.toml
apps/ai-orchestrator/src/: main.py
apps/ai-orchestrator/src/agents/: __init__.py
apps/ai-orchestrator/src/langgraph/: graph.py  state.py
apps/ai-orchestrator/src/memory/: __init__.py
apps/ai-orchestrator/src/prompts/: __init__.py
apps/ai-orchestrator/src/tools/: __init__.py
apps/backend/: .env.example  pyproject.toml
apps/backend/src/: main.py
apps/backend/src/core/: config.py  crypto.py  exceptions.py  kube.py  logging.py  pipeline_parser.py  security.py
apps/backend/src/database/: alembic.ini  connection.py  env.py  seed.py
apps/backend/src/dependencies/: auth.py
apps/backend/src/models/: ai.py  auth.py  governance.py  kubernetes.py  observability.py  pipeline.py  project.py
apps/backend/src/observability/: telemetry.py
apps/backend/src/repositories/: org.py  team.py  user.py
apps/backend/src/routers/: __init__.py  ai.py  auth.py  environments.py  governance.py  kubernetes.py  observability.py  organizations.py  pipelines.py  projects.py  (+3 more)
apps/backend/tests/: test_ai.py  test_auth.py  test_governance.py  test_kubernetes.py  test_observability.py  test_pipelines.py  test_projects.py
(+66 files in other folders)
