[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.1"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
structlog = "^24.4.0"
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"
celery = "^5.4.0"
alembic = "^1.14.0"
argon2-cffi = "^23.1.0"
pyjwt = "^2.10.1"
email-validator = "^2.1.0"
cryptography = "^42.0.8"
pyyaml = "^6.0.1"
kubernetes = "^30.1.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
